--- a/Outbound.conf
+++ b/Outbound.conf
@@ -52,6 +52,7 @@ udp-policy-not-supported-behaviour = reject
 低倍率 = select, ✈️ 我的节点
 香港流媒体 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇨🇦 加拿大节点, 🇬🇧 英国节点, 🇫🇷 法国节点, 🇩🇪 德国节点, 🇳🇱 荷兰节点, 🇹🇷 土耳其节点,
 台湾流媒体 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇨🇦 加拿大节点, 🇬🇧 英国节点, 🇫🇷 法国节点, 🇩🇪 德国节点, 🇳🇱 荷兰节点, 🇹🇷 土耳其节点,
+日本流媒体 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇨🇦 加拿大节点, 🇬🇧 英国节点, 🇫🇷 法国节点, 🇩🇪 德国节点, 🇳🇱 荷兰节点, 🇹🇷 土耳其节点,
 韩国流媒体 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇨🇦 加拿大节点, 🇬🇧 英国节点, 🇫🇷 法国节点, 🇩🇪 德国节点, 🇳🇱 荷兰节点, 🇹🇷 土耳其节点,
 美国流媒体 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇨🇦 加拿大节点, 🇬🇧 英国节点, 🇫🇷 法国节点, 🇩🇪 德国节点, 🇳🇱 荷兰节点, 🇹🇷 土耳其节点,
 欧洲流媒体 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇰🇷 韩国节点, 🇸🇬 新加坡节点, 🇨🇦 加拿大节点, 🇬🇧 英国节点, 🇫🇷 法国节点, 🇩🇪 德国节点, 🇳🇱 荷兰节点, 🇹🇷 土耳其节点,
