--- a/Outbound.conf
+++ b/Outbound.conf
@@ -91,7 +91,7 @@ AI服务 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本
 
 🇹🇷 土耳其节点 = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇹🇷)|(土耳其)|(Turkey)|(TR), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Turkey.png
 
-✈️ 我的节点 = select, policy-path=https://sub.ssr.sh/link/19xDqiJ5t4Hj6zht?mu=1, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
+✈️ 我的节点 = select, policy-path=https://api-huacloud.net/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fapi.xmancdn.net%2Fosubscribe.php%3Fsid%3D187279%26token%3DpQTjDiE8hC6P, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
 
 [Rule]
 # > 广告拦截
